--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ section {
   color: #fff;
   cursor: pointer;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
   font-weight: 700;
   font-size: 10px;
   box-sizing: border-box;
@@ -120,6 +120,10 @@ section {
 
 .btn-orange {
   background: #FD460E;
+}
+
+.pb-0 {
+  padding-bottom: 0 !important;
 }
 
 .title {
@@ -261,7 +265,7 @@ section {
 @media screen and (min-width:992px) {
 
   .page-wrapper {
-    margin-top: 145px;
+    margin-top: 85px;
   }
 
   .section-title {
@@ -533,7 +537,7 @@ section {
   flex-direction: column;
   row-gap: 10px;
   max-width: 880px;
-  margin: 0 auto 80px;
+  margin: 0 auto 40px;
 }
 
 .form .input-wrapper{
@@ -841,16 +845,6 @@ section {
 .footer__logo{
   width: 30px;
   height: 40px;
-}
-
-.footer__btn{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 155px;
-  height: 32px;
-  margin: unset;
-  font-size: 10px;
 }
 
 .footer .social-ico svg{
